# api/docs/swagger.json
@@ -762,6 +762,12 @@
                     "description": "debug, info, warn, error, dpanic, panic, fatal",
                     "type": "string"
                 },
+                "passcodeLength": {
+                    "type": "integer"
+                },
+                "passcodePool": {
+                    "type": "string"
+                },
                 "postgresDatabase": {
                     "type": "string"
                 },
@@ -791,10 +797,10 @@
         "rest.AccessModel": {
             "type": "object",
             "properties": {
-                "method": {
+                "access_token": {
                     "type": "string"
                 },
-                "token": {
+                "method": {
                     "type": "string"
                 },
                 "url": {
@@ -941,7 +947,7 @@
                     "type": "object",
                     "$ref": "#/definitions/rest.ClientTypeModel"
                 },
-                "passcode_token": {
+                "token": {
                     "type": "object",
                     "$ref": "#/definitions/rest.TokenModel"
                 },
@@ -963,10 +969,10 @@
         "rest.RefreshTokenModel": {
             "type": "object",
             "required": [
-                "token"
+                "refresh_token"
             ],
             "properties": {
-                "token": {
+                "refresh_token": {
                     "type": "string"
                 }
             }
